--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-.container {
+/* body {
+    background-color: orange;
+} */
+
+.app {
     display: grid;
     grid-template: auto / repeat(7, 1fr);
     grid-template-areas:
@@ -32,6 +36,7 @@
     height: 100%;
     width: 100%;
 }
+
 nav { 
     grid-area: nav; 
     background-color: rgb(255, 0, 0);
@@ -43,6 +48,7 @@ nav {
     background-color: rgb(255, 123, 0);
     border: 2px solid white;
     font-size: 30px; }
+
 #dragAndDrop { grid-area: dd;
     background-color: rgb(230, 203, 27);
     border: 2px solid white;
@@ -59,5 +65,4 @@ nav {
     background-color: rgb(225, 0, 255);
     border: 2px solid white;
     font-size: 30px;}
-
 
