--- a/static/css/index.css
+++ b/static/css/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    height: 2px;
 }
 
 code {
