updated code preview

--- a/static/css/codePreview.css
+++ b/static/css/codePreview.css
@@ -1,43 +1,39 @@
 #codePreview {
     margin-left: 4%;
     font-size: 25px;
+    color: rgb(255, 255, 255);
+    width: 70%;
 }
 
 #import {
-    color: pink;
     /* margin-right: 200px */
 }
 
 #export {
-    color: pink;
     /* margin-right: 200px */
 }
 
 #return {
-    color: pink;
     margin-left: 7%;
 }
 
 #mainOpeningTag {
-    color: pink;
     margin-left: 9%;
 }
 
 #htmlTags {
-    margin-left: 12%;
+    margin-left: 15%;
 }
 
 #mainClosingTag {
-    color: pink;
     margin-left: 9%;
 }
 
 #paren {
-    color: pink;
     margin-left: 7%;
 }
 
 #endingCurly {
-    color: pink;
     margin-left: 4%;
 }
+
