--- a/static/css/sideBarStyle.css
+++ b/static/css/sideBarStyle.css
@@ -75,9 +75,9 @@ button {
     color:-webkit-linear-gradient(#68eda7, #ffe958);
     background: -webkit-linear-gradient(#68eda7, #ffe958);
     -webkit-background-clip: text;
-    -webkit-text-fill-color: #2d3033;
+    -webkit-text-fill-color: rgb(45, 48, 51);
     font-weight: bold;
- 
+  
     
 }
 
