--- a/static/css/sideBarStyle.css
+++ b/static/css/sideBarStyle.css
@@ -37,6 +37,15 @@
     box-sizing: border-box;
     border: 1px solid red;
 } */
+
+#drop.scroll {
+    background-color: #fed9ff;
+        width: 600px;
+        height: 150px;
+        overflow: scroll;
+        text-align: justify;
+        padding: 20px;
+}
 #clearBtn{
     color: rgb(255, 0, 221);
  }
@@ -47,30 +56,39 @@
     
     width: 100%;
     height: 100%;
+    overflow: scroll;
+
 }
 #side,
 #drop {
     float: left;
     min-height: 450px;
     height: 70%;
+    overflow: scroll;
+
 }
 #side {
     /* width: 250px; */
     width: 12%;
     background-image: linear-gradient(#68eda7, #ffe958);
     height: 100%;
-    border: 3px solid #68eda7
+    border: 3px solid #68eda7;
+    overflow: scroll;
+
 }
+
+
 #drop {
     /* width: 750px; */
     width: 87%;
     border-top: 3px solid #68EDA7;
-    background-color: #2d3033;
+    background-color: rgb(65, 65, 65);
     height: 100%;
     text-align: center;
     font-weight: bolder;
+    overflow: scroll;
+    
 }
-
 button {
     font-size: 20px;
     /* color:-webkit-linear-gradient(#68eda7, #ffe958);
