--- a/static/css/sideBarStyle.css
+++ b/static/css/sideBarStyle.css
@@ -38,14 +38,7 @@
     border: 1px solid red;
 } */
 
-#drop.scroll {
-    background-color: #fed9ff;
-        width: 600px;
-        height: 150px;
-        overflow: scroll;
-        text-align: justify;
-        padding: 20px;
-}
+
 #clearBtn{
     color: rgb(255, 0, 221);
  }
@@ -55,7 +48,7 @@
     background-image: linear-gradient(#68eda7, #ffe958);
     
     width: 100%;
-    height: 100%;
+    height: 500px;
     overflow: scroll;
 
 }
@@ -65,15 +58,17 @@
     min-height: 450px;
     height: 70%;
     overflow: scroll;
+    height: 500px;
 
 }
 #side {
     /* width: 250px; */
     width: 12%;
     background-image: linear-gradient(#68eda7, #ffe958);
-    height: 100%;
+    height: 500px;
     border: 3px solid #68eda7;
     overflow: scroll;
+    
 
 }
 
@@ -82,8 +77,8 @@
     /* width: 750px; */
     width: 87%;
     border-top: 3px solid #68EDA7;
-    background-color: rgb(65, 65, 65);
-    height: 100%;
+    background-color: #2D3033;
+    height: 500px;
     text-align: center;
     font-weight: bolder;
     overflow: scroll;
