--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -2,9 +2,9 @@ img{
 	width: 100%;
 }
 .signup {
-    height: 1000px;
+    height: 100%;
     width: 100%;
-    background-image: linear-gradient(rgb(129, 174, 120), rgb(231, 218, 72));
+    background-image: linear-gradient(rgb(161, 215, 161), rgb(254, 247, 104));
     position: relative;
 }
 .signup_box {
@@ -24,6 +24,8 @@ img{
   width: 41%;
   height: 100%;
   padding: 0px 25px;
+  background-image: linear-gradient(rgb(161, 215, 161), rgb(254, 247, 104));
+
   
 }
 .signup_box .right{
@@ -44,20 +46,20 @@ img{
   text-align: center;
   margin-bottom: 40px;
   font-size: 35px;
-  color:#f1f3f5
+  color:#2d3033;
 }
 .left input {
     border: none;
     width: 80%;
     margin: 5px 0px;
-    border-bottom: 1px solid #ffffff;
+    border-bottom: 1px solid #2d3033;
     padding: 7px 9px;
     width: 100%;
     overflow: hidden;
     background: transparent;
     font-weight: 600;
     font-size: 14px;
-    color: white;
+    color: #2d3033;
 }
 .left{
 	background-color: #2d3033;
@@ -69,8 +71,8 @@ img{
     display: block;
     margin: auto;
     margin-top: 120px;
-    background-image: linear-gradient(rgb(129, 174, 120), rgb(231, 218, 72));
-    color:#2d3033;
+    background-color: #2d3033;;
+    color: rgb(161, 215, 161);
     font-weight: bold;
     -webkit-box-shadow: 0px 9px 15px -11px rgb(140, 196, 88);
     -moz-box-shadow: 0px 9px 15px -11px rgb(71, 161, 75);
@@ -83,9 +85,11 @@ img{
   background: url("../images/Finallogo.png");
   background-repeat: no-repeat;
   background-size: cover;
-	color: #fff;
+	color: rgb(241, 239, 209);
 	position: relative;
-  width: 120%
+  width: 120%;
+  background-color: #fefcf6;
+
 }
 
 .right .right-text{
@@ -108,6 +112,6 @@ img{
 
 #loginlink {
   text-align: center;
-  color:#f3f5f6;
+  color: #2d3033;
   padding-top: 30px;
 }
