--- a/static/css/sideBarStyle.css
+++ b/static/css/sideBarStyle.css
@@ -1,77 +1,36 @@
-/* #side {
-    overflow-y: scroll;
-    overflow-x: hidden;
-    
+
+ .draggedTags:hover {
+    background-color: green;
+} 
+
+.draggedTags:active{
+    background: rgb(184, 225, 187);
 }
-
-/* #scroll{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    column-gap: 10px;
-}
-#side{
-    height: 100px;
-    background: yellow;
-    text-align: center;
-    box-sizing: border-box;
-    border: 1px solid red;
-}
-
-#drop{
-    height: 100px;
-    background: yellow;
-    text-align: center;
-    box-sizing: border-box;
-    border: 1px solid red;
-} */
-
-
 
 #scroll {
-    /* width: 1005px; */
-    /* margin: 0 auto;
-    background-image: linear-gradient(#68eda7, #ffe958);
-    
-    width: 100%;
-    height: 500px;
-    overflow: scroll; */
-display: grid;
-grid-template-areas: 
-'sd dr dr dr dr dr dr dr dr dr'
-'sd dr dr dr dr dr dr dr dr dr'
-'sd dr dr dr dr dr dr dr dr dr';
-
+  display: grid;
+  grid-template-areas:
+    "sd dr dr dr dr dr dr dr dr dr"
+    "sd dr dr dr dr dr dr dr dr dr"
+    "sd dr dr dr dr dr dr dr dr dr";
 }
 #side,
 #drop {
-    /* float: left;
-    min-height: 450px;
-    height: 70%;
-    overflow: scroll;
-    height: 500px; */
-    max-height: 600px;
-    border-bottom:3px solid #68eda7;
+  max-height: 600px;
+  border-bottom: 2px solid #68eda7;
 }
 #side {
-    /* width: 250px; */
-    /* width: 12%;
-    background-image: linear-gradient(#68eda7, #ffe958);
-    height: 500px;
-    border: 3px solid #68eda7;
-    overflow: scroll;
-     */
-     grid-area: sd;
-     background-color: #ffe958;
-     overflow-y: scroll;
-
+  grid-area: sd;
+  background-color: #ffe958;
+  overflow-y: scroll;
 }
 
 #side::-webkit-scrollbar {
-    width: 10px; 
- }
+  width: 10px;
+}
 
 #side::-webkit-scrollbar-track {
-  background-color: black;
+  background-color: #2d3033;
 }
 
 #side::-webkit-scrollbar-thumb {
@@ -79,26 +38,17 @@ grid-template-areas:
   border-radius: 25px;
 }
 #drop {
-    /* width: 750px; */
-    /* width: 87%;
-    border-top: 3px solid #68EDA7;
-    background-color: #2D3033;
-    height: 500px;
-    text-align: center;
-    font-weight: bolder;
-    overflow: scroll;
-     */
-     grid-area: dr;
-     background-color:#2D3033;
-     overflow-y: scroll;
-     border:3px solid #68eda7;
+  grid-area: dr;
+  background-color: #2d3033;
+  overflow-y: scroll;
+  border: 2px solid #68eda7;
 }
 #drop::-webkit-scrollbar {
-    width: 10px; 
- }
+  width: 10px;
+}
 
 #drop::-webkit-scrollbar-track {
-  background-color: black;
+  background-color: #2d3033;
 }
 
 #drop::-webkit-scrollbar-thumb {
@@ -106,52 +56,41 @@ grid-template-areas:
   border-radius: 25px;
 }
 button {
-    font-size: 20px;
-    /* color:-webkit-linear-gradient(#68eda7, #ffe958);
-    background: -webkit-linear-gradient(#68eda7, #ffe958);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: rgb(45, 48, 51); */
-    font-weight: bold;
-  
-    
+  font-size: 20px;
+  font-weight: bold;
 }
-
-/* background-color: #777;
-height: 100%;
-background-color: #2D3033;
-border-image: linear-gradient(180deg, rgb(0,143,104), rgb(250,224,66)) 1;
-border-width: 2px;
-border-style: solid;
-font-size: 30px; */
 
 .draggedTags {
-    
-    
-    text-align: center;
-    font-weight: bold;
-    
-    
-    width: 97%;
-    
-    
-    margin-left: 1%;
-    margin-bottom: 8px;
-    margin-top: 5px;
-    font-size: 20px;
-    background: -webkit-linear-gradient(#68eda7, #ffe958);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    border: 3px solid;
-    border-image: linear-gradient(45deg, #68eda7, #ffe958) 1;
-    border-radius:10px;
-    
+  text-align: center;
+  font-weight: bold;
+  width: 97%;
+  margin-left: 1%;
+  margin-bottom: 8px;
+  margin-top: 5px;
+  font-size: 20px;
+  background: -webkit-linear-gradient(#68eda7, #ffe958);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  border: 3px solid;
+  border-image: linear-gradient(45deg, #68eda7, #ffe958) 1;
+  border-radius: 10px;
 }
 
-.draggedTags:hover{
-    background-color: #68eda7;
+.draggedTags:hover {
+  background-color: #68eda7;
 }
 
-
-#clearBtn{
-   color: aqua;
+#delete-btn {
+  background-image: linear-gradient(#68eda7, #ffe958);
+  color: #2d3033;
+  float: right;
+  margin-top: 0px;
+  margin-right: -1px;
+  height: 3px;
+}
+#draggedButton {
+  color: #2d3033;
+  width: 100%;
+  font-size: 20px;
+  font-weight: bolder;
 }
